--- a/ArduinoUno_test/platformio.ini
+++ b/ArduinoUno_test/platformio.ini
@@ -16,3 +16,4 @@ framework = arduino
 lib_deps=
     adafruit/DHT sensor library @ ^1.4.6
     arduino-libraries/Stepper @ ^1.1.3
+    teckel12/NewPing @ ~1.9.7
