--- a/ArduinoUno_test/platformio.ini
+++ b/ArduinoUno_test/platformio.ini
@@ -17,3 +17,12 @@ lib_deps=
     adafruit/DHT sensor library @ ^1.4.6
     arduino-libraries/Stepper @ ^1.1.3
     teckel12/NewPing @ ~1.9.7
+
+[env:knob]
+platform = atmelavr
+board = uno
+framework = arduino
+
+lib_deps=
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
