Convertido todo a environments

--- a/ArduinoUno_test/platformio.ini
+++ b/ArduinoUno_test/platformio.ini
@@ -1,13 +1,3 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:uno]
 platform = atmelavr
 board = uno
@@ -24,5 +14,53 @@ board = uno
 framework = arduino
 
 lib_deps=
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:buzzer]
+platform = atmelavr
+board = uno
+framework = arduino
+
+lib_deps=
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:dht11]
+platform = atmelavr
+board = uno
+framework = arduino
+
+lib_deps=
+    adafruit/DHT sensor library @ ^1.4.6
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:photoresistor]
+platform = atmelavr
+board = uno
+framework = arduino
+
+lib_deps=
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:stepper]
+platform = atmelavr
+board = uno
+framework = arduino
+
+lib_deps =
+    arduino-libraries/Stepper @ ^1.1.3
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:ultrasunidos]
+platform = atmelavr
+board = uno
+framework = arduino
+
+lib_deps=
+    teckel12/NewPing @ ~1.9.7
 
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
