Programas de sensor de temperatura añadido

--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -2,3 +2,22 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+
+[env:blink]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:DHT22]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_baud = 115200
+
+lib_deps = 
+    adafruit/Adafruit Unified Sensor @ ^1.1.14
+    adafruit/DHT sensor library @ ^1.4.6
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
