--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -14,7 +14,7 @@ build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-monitor_baud = 115200
+monitor_speed = 9600
 
 lib_deps = 
     adafruit/Adafruit Unified Sensor @ ^1.1.14
