Sensor de humedad de suelo y knob probados con el esp32

--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -21,3 +21,17 @@ lib_deps =
     adafruit/DHT sensor library @ ^1.4.6
 
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:knob]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:SoilMoisture]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
