Añadidos los documentos probando la pantalla, colores no funcionan bien. Invertidos?

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 .DS_Store
 .vscode
-./Diseño/GithubBanner
+Diseño/GithubBanner
+Dise\303\261o/GithubBanner/
+Diseño/Shematics/Shematics-backups
+Dise\303\261o/Shematics/Shematics-backups
