--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -1,13 +1,25 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+lib_deps = 
+	bodmer/TFT_eSPI@^2.5.43
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.3
 
 [env:blink]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
 
 [env:DHT22]
@@ -15,23 +27,51 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 9600
-
 lib_deps = 
-    adafruit/Adafruit Unified Sensor @ ^1.1.14
-    adafruit/DHT sensor library @ ^1.4.6
-
+	adafruit/Adafruit Unified Sensor @ ^1.1.14
+	adafruit/DHT sensor library @ ^1.4.6
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
 
 [env:knob]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
 
 [env:SoilMoisture]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
 
+[env:disp]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+lib_deps = 
+	bodmer/TFT_eSPI@^2.5.43
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.3
+build_flags = 
+	-D USER_SETUP_LOADED=1
+	-D ST7789_DRIVER=1
+	-D TFT_RGB_ORDER=TFT_RGB
+	-D TFT_MISO=-1
+	-D TFT_MOSI=23
+	-D TFT_SCLK=18
+	-D TFT_CS=-1
+	-D TFT_DC=2
+	-D TFT_RST=4
+	-D TFT_WIDTH=240
+	-D TFT_HEIGHT=320
+	-D SPI_FREQUENCY=40000000
+	-D SPI_READ_FREQUENCY=20000000
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:GFX]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+lib_deps = 
+	adafruit/Adafruit GFX Library @ ^1.11.9
+	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.3
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
