--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Diseño/GithubBanner
 Dise\303\261o/GithubBanner/
 Diseño/Shematics/Shematics-backups
 Dise\303\261o/Shematics/Shematics-backups
+Código/esp32/.assets
