--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -90,13 +90,34 @@ build_flags =
 	-D SMOOTH_FONT=1
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
 
-[env:GFX]
+[env:disp-test]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = 
-	adafruit/Adafruit GFX Library @ ^1.11.9
-	adafruit/Adafruit ST7735 and ST7789 Library@^1.10.3
+lib_deps = bodmer/TFT_eSPI@^2.5.43
+build_flags = 
+	-D USER_SETUP_LOADED=1
+	-D ST7789_DRIVER=1
+	-D TFT_RGB_ORDER=TFT_BGR
+	-D TFT_MISO=-1
+	-D TFT_MOSI=23
+	-D TFT_SCLK=18
+	-D TFT_CS=15
+	-D TFT_DC=16
+	-D TFT_RST=4
+	-D TFT_WIDTH=240
+	-D TFT_HEIGHT=320
+	-D SPI_FREQUENCY=40000000
+	;-D TFT_INVERSION_ON=0
+	-D TFT_INVERSION_OFF=1
+	-D LOAD_GLCD=1
+	-D LOAD_FONT2=1
+	-D LOAD_FONT4=1
+	-D LOAD_FONT6=1
+	-D LOAD_FONT7=1
+	-D LOAD_FONT8=1
+	-D LOAD_GFXFF=1
+	-D SMOOTH_FONT=1
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
 
 [env:wifi]
