--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -5,6 +5,8 @@ framework = arduino
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.43
 	WiFi @ ^2.0.0
+	adafruit/Adafruit Unified Sensor @ ^1.1.14
+	adafruit/DHT sensor library @ ^1.4.6
 
 build_flags = 
 	-D USER_SETUP_LOADED=1
