Problema con sincronización y conexión wifi solucionado (causado por la fuente de alimentación)
Siguiente: barra de progreso de riego, barra de progreso de temperatura y sensor de humedad de suelo

--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -128,5 +128,6 @@ board = esp32doit-devkit-v1
 framework = arduino
 lib_deps = 
 	WiFi @ ^2.0.0
+	me-no-dev/AsyncTCP @ ^1.1.1
 
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
