Terminado el esquema electrónico y añadido un pequeño test con el fotoresistor

--- a/Código/esp32/platformio.ini
+++ b/Código/esp32/platformio.ini
@@ -131,3 +131,9 @@ lib_deps =
 	me-no-dev/AsyncTCP @ ^1.1.1
 
 build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
+
+[env:photores]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+build_src_filter = +<*.h> +<main-${PIOENV}.cpp>
